--- a/Homework/server/server.vcxproj
+++ b/Homework/server/server.vcxproj
@@ -163,9 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="async.cpp" />
-    <ClCompile Include="multi_thread.cpp" />
     <ClCompile Include="server.cpp" />
-    <ClCompile Include="single_thread.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -180,6 +178,11 @@
     <None Include="..\include\mutex.inl" />
     <None Include="..\include\net.inl" />
     <None Include="..\include\queue.inl" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\external\http_parser\http_parser.vcxproj">
+      <Project>{6107e49b-a4e1-4247-8f2e-dab64beb376f}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
